cambios en home.html y about.html

--- a/movie/templates/about.html
+++ b/movie/templates/about.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Welcome to Home Page :) <span style="color: magenta;">{{name}}</span></h1>
-    <h2>This is the full home page</h2>
+    <img src="https://steamuserimages-a.akamaihd.net/ugc/1667980019599930485/F57B5D6531681D2C2CB8090EBA30F734F1412017/?imw=637&imh=358&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true" alt="cat" height="100px">
+    <h2>This is the full about page</h2>
 </body>
 </html>
