--- a/movie/templates/home.html
+++ b/movie/templates/home.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Welcome to Home Page :) {{name}}</h1>
+    <h1>Welcome to Home Page :) <span style="color: magenta;">{{name}}</span></h1>
     <h2>This is the full home page</h2>
 </body>
 </html>
