--- a/movie/templates/home.html
+++ b/movie/templates/home.html
@@ -7,8 +7,29 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <!--<h1>Welcome to Home Page :) <span style="color: magenta;">{{name}}</span></h1>
-    <h2>This is the full home page</h2>-->
+  {% extends 'base.html'%}
+    {% block content %}
+    <div class="container mt-5">
+        <h1 class="mb-3">Upcoming ...</h1>
+        <div id="movieCarousel" class="carousel slide mb-3" data-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="https://via.placeholder.com/800x400/FF5733/FFFFFF?text=Movie1" class="d-block w-100" alt="Movie 1">
+            </div>
+            <div class="carousel-item">
+              <img src="https://via.placeholder.com/800x400/C70039/FFFFFF?text=Movie2" class="d-block w-100" alt="Movie 2">
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#movieCarousel" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#movieCarousel" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+    </div>
     <div class="container">
         <form action="">
             <div class="mb-3">
@@ -25,17 +46,12 @@
 
         <div v-for="movie in movies" class="col">
             <div class="card">
-                <img src="{{movie.url}}" alt="" class="card-img-top">
+                <img class="card-img-top" src="{{ movie.url }}" alt="Card img"  height="500" width="200">
                 <div class="card-body">
                     <h5 class="card-title fw-bold">{{movie.title}}</h5>
-                    <p class="card-text"> {{ movie.description }}</p>
-                    <img src="{{ movie.image }}" alt="">
-                    {%if movie.url %}
-                    <!--<<img src="{{movie.url}}" alt="" width="250px">
-                        a href="{{movie.url}}">Movie Link</a>-->
-                    {%endif%}
+                    <p class="card-text"> {{ movie.description }}</p>    
+                    <a href="{{movie.url}}" class="btn btn-primary">Movie link</a>
                 </div>
-                <h2> {{ movie.title }}</h2>
             
         </div>
         </div>
@@ -43,5 +59,11 @@
     </div>
     <br/>
     </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.min.js" integrity="sha384-heAjqF+bCxXpCWLa6Zhcp4fu20XoNIA98ecBC1YkdXhszjoejr5y9Q77hIrv8R9i" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    {% endblock content%}
 </body>
 </html>
